Bug 1528090 - ensure that the urlbar page action separator is not visible because of toolbartabstop. r=dao
MozReview-Commit-ID: C81oYaPsuAd

Differential Revision: https://phabricator.services.mozilla.com/D19969

UltraBlame original commit: 510bae6520ade182a4ef62573ef215f1eef957a9

--- a/browser/themes/shared/urlbar-searchbar.inc.css
+++ b/browser/themes/shared/urlbar-searchbar.inc.css
@@ -251,7 +251,7 @@
   height: 30px;
 }
 
-#page-action-buttons > :not([hidden]) ~ #pageActionSeparator {
+#page-action-buttons > :not([hidden]):not(toolbartabstop) ~ #pageActionSeparator {
   
 
   visibility: visible;
